# lifx-desktop-app

./: Cargo.toml  README.md  index.html  lifx-desktop-app
src/: discovery.rs  effects.rs  main.rs  onboard.rs  routes.rs  socket.rs  web.rs
static/: index.html  index.js
web/: index.html
