[package]
name = "lifx-desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
crossterm = "0.28.1"
ctrlc = "3.4.5"
env_logger = "0.11.5"
lifx_lan = { path = "../lifx-lan" }
log = "0.4.22"
native-tls = "0.2.12"

network-interface = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }

socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
